evolutions delete products and add many products in store

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -555,11 +555,17 @@ video {
 .mb-6{
   margin-bottom: 1.5rem;
 }
+.ml-2{
+  margin-left: 0.5rem;
+}
 .ml-3{
   margin-left: 0.75rem;
 }
 .ml-4{
   margin-left: 1rem;
+}
+.ml-5{
+  margin-left: 1.25rem;
 }
 .mr-2{
   margin-right: 0.5rem;
@@ -596,9 +602,6 @@ video {
 }
 .mt-9{
   margin-top: 2.25rem;
-}
-.ml-2{
-  margin-left: 0.5rem;
 }
 .block{
   display: block;
@@ -645,6 +648,9 @@ video {
 .max-h-screen{
   max-height: 100vh;
 }
+.w-36{
+  width: 9rem;
+}
 .w-5{
   width: 1.25rem;
 }
@@ -654,23 +660,14 @@ video {
 .w-8{
   width: 2rem;
 }
+.w-80{
+  width: 20rem;
+}
 .w-96{
   width: 24rem;
 }
 .w-full{
   width: 100%;
-}
-.w-36{
-  width: 9rem;
-}
-.w-16{
-  width: 4rem;
-}
-.w-32{
-  width: 8rem;
-}
-.w-24{
-  width: 6rem;
 }
 .min-w-full{
   min-width: 100%;
@@ -716,9 +713,6 @@ video {
 }
 .items-center{
   align-items: center;
-}
-.justify-end{
-  justify-content: flex-end;
 }
 .justify-center{
   justify-content: center;
@@ -798,9 +792,9 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(248 113 113 / var(--tw-border-opacity));
 }
-.bg-blue-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
+.border-orange-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(194 65 12 / var(--tw-border-opacity));
 }
 .bg-emerald-300\/60{
   background-color: rgb(110 231 183 / 0.6);
@@ -871,6 +865,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(254 252 232 / var(--tw-bg-opacity));
 }
+.bg-orange-700\/60{
+  background-color: rgb(194 65 12 / 0.6);
+}
 .p-2{
   padding: 0.5rem;
 }
@@ -885,10 +882,6 @@ video {
 }
 .p-6{
   padding: 1.5rem;
-}
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 .px-12{
   padding-left: 3rem;
@@ -948,9 +941,6 @@ video {
 }
 .pb-1{
   padding-bottom: 0.25rem;
-}
-.pb-6{
-  padding-bottom: 1.5rem;
 }
 .pl-6{
   padding-left: 1.5rem;
@@ -1050,10 +1040,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(126 34 206 / var(--tw-text-opacity));
 }
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
 .text-red-700{
   --tw-text-opacity: 1;
   color: rgb(185 28 28 / var(--tw-text-opacity));
@@ -1070,9 +1056,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(133 77 14 / var(--tw-text-opacity));
 }
-.text-red-900{
+.text-red-500{
   --tw-text-opacity: 1;
-  color: rgb(127 29 29 / var(--tw-text-opacity));
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .opacity-90{
   opacity: 0.9;
@@ -1117,6 +1103,10 @@ video {
 .hover\:bg-purple-800:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(107 33 168 / var(--tw-bg-opacity));
+}
+.hover\:bg-orange-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 237 213 / var(--tw-bg-opacity));
 }
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
@@ -1192,10 +1182,6 @@ video {
   .dark\:bg-purple-600{
     --tw-bg-opacity: 1;
     background-color: rgb(147 51 234 / var(--tw-bg-opacity));
-  }
-  .dark\:text-blue-400{
-    --tw-text-opacity: 1;
-    color: rgb(96 165 250 / var(--tw-text-opacity));
   }
   .dark\:text-gray-300{
     --tw-text-opacity: 1;
@@ -1278,17 +1264,11 @@ video {
   .sm\:mb-0{
     margin-bottom: 0px;
   }
-  .sm\:flex{
-    display: flex;
-  }
   .sm\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .sm\:flex-row{
     flex-direction: row;
-  }
-  .sm\:items-center{
-    align-items: center;
   }
   .sm\:items-baseline{
     align-items: baseline;
@@ -1379,10 +1359,6 @@ video {
   .lg\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
-  }
-  .lg\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
 @media (min-width: 1280px){
