--- a/public/css/app.css
+++ b/public/css/app.css
@@ -603,6 +603,9 @@ video {
 .mt-9{
   margin-top: 2.25rem;
 }
+.mt-24{
+  margin-top: 6rem;
+}
 .block{
   display: block;
 }
@@ -796,6 +799,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(194 65 12 / var(--tw-border-opacity));
 }
+.border-gray-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
 .bg-emerald-300\/60{
   background-color: rgb(110 231 183 / 0.6);
 }
@@ -868,6 +875,14 @@ video {
 .bg-orange-700\/60{
   background-color: rgb(194 65 12 / 0.6);
 }
+.bg-purple-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 180 254 / var(--tw-bg-opacity));
+}
+.bg-purple-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+}
 .p-2{
   padding: 0.5rem;
 }
@@ -882,6 +897,9 @@ video {
 }
 .p-6{
   padding: 1.5rem;
+}
+.p-1{
+  padding: 0.25rem;
 }
 .px-12{
   padding-left: 3rem;
@@ -1186,6 +1204,10 @@ video {
   .dark\:bg-purple-600{
     --tw-bg-opacity: 1;
     background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+  }
+  .dark\:bg-purple-300{
+    --tw-bg-opacity: 1;
+    background-color: rgb(216 180 254 / var(--tw-bg-opacity));
   }
   .dark\:text-gray-300{
     --tw-text-opacity: 1;
