--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1290,11 +1290,29 @@ video {
   .sm\:mb-0{
     margin-bottom: 0px;
   }
+  .sm\:flex{
+    display: flex;
+  }
+  .sm\:w-16{
+    width: 4rem;
+  }
+  .sm\:w-8{
+    width: 2rem;
+  }
+  .sm\:w-96{
+    width: 24rem;
+  }
   .sm\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .sm\:flex-row{
     flex-direction: row;
+  }
+  .sm\:flex-col{
+    flex-direction: column;
+  }
+  .sm\:items-center{
+    align-items: center;
   }
   .sm\:items-baseline{
     align-items: baseline;
@@ -1332,6 +1350,9 @@ video {
   }
   .md\:flex-row{
     flex-direction: row;
+  }
+  .md\:flex-col{
+    flex-direction: column;
   }
   .md\:items-center{
     align-items: center;
@@ -1371,8 +1392,23 @@ video {
     margin-left: -2rem;
     margin-right: -2rem;
   }
+  .lg\:flex{
+    display: flex;
+  }
+  .lg\:w-96{
+    width: 24rem;
+  }
   .lg\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .lg\:flex-row{
+    flex-direction: row;
+  }
+  .lg\:flex-col{
+    flex-direction: column;
+  }
+  .lg\:rounded-full{
+    border-radius: 9999px;
   }
   .lg\:px-24{
     padding-left: 6rem;
@@ -1385,6 +1421,10 @@ video {
   .lg\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
+  }
+  .lg\:focus\:ring-purple-300:focus{
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(216 180 254 / var(--tw-ring-opacity));
   }
 }
 @media (min-width: 1280px){
